--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.15",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "axios": "^1.2.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "xml-js": "^1.6.11"
   }
 }
