--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "start-server": "node dist/index.js",
+    "start": "run-s build start-server"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "npm-run-all": "^4.1.5",
     "typescript": "^4.9.4"
   },
   "dependencies": {
